@@ -212,11 +212,14 @@ Cross-referencing figures by figure number
 
 .. versionadded:: 1.3
 
+.. versionchanged:: 1.5
+   `numref` role can also refer sections
+
 .. rst:role:: numref
 
-   Link to the specified figures, tables and code-blocks; the standard reST
-   labels are used. When you use this role, it will insert a reference to the
-   figure with link text by its figure number like "Fig. 1.1".
+   Link to the specified figures, tables, code-blocks and sections; the standard
+   reST labels are used.  When you use this role, it will insert a reference to
+   the figure with link text by its figure number like "Fig. 1.1".
 
    If an explicit link text is given (like usual: ``:numref:`Image of Sphinx (Fig.
    %s) <my-figure>```), the link caption will be the title of the reference.
