@@ -104,7 +104,8 @@ class Config(object):
         nitpick_ignore = ([], None),
         numfig = (False, 'env'),
         numfig_secnum_depth = (1, 'env'),
-        numfig_format = ({'figure': l_('Fig. %s'),
+        numfig_format = ({'section': l_('Section %s'),
+                          'figure': l_('Fig. %s'),
                           'table': l_('Table %s'),
                           'code-block': l_('Listing %s')},
                          'env'),
