@@ -1,3 +1,5 @@
+.. _baz_a:
+
 Baz A
 -----
 
