@@ -1,3 +1,5 @@
+.. _index:
+
 test-tocdepth
 =============
 
@@ -48,5 +50,8 @@ test-tocdepth
 * Table.2.2 is :numref:`Table:%s <table22>`
 * List.1 is :numref:`CODE_1`
 * List.2.2 is :numref:`Code-%s <CODE22>`
+* Section.1 is :numref:`foo`
+* Section.2.1 is :numref:`bar_a`
+* Unnumbered section is :numref:`index`
 * Invalid numfig_format 01: :numref:`invalid <fig1>`
 * Invalid numfig_format 02: :numref:`Fig %s %s <fig1>`
