@@ -151,13 +151,16 @@ def test_numref(app, status, warning):
     assert '\\hyperref[baz:table22]{Table:\\ref{baz:table22}}' in result
     assert '\\hyperref[index:code-1]{Listing \\ref{index:code-1}}' in result
     assert '\\hyperref[baz:code22]{Code-\\ref{baz:code22}}' in result
+    assert '\\hyperref[foo:foo]{Section \\ref{foo:foo}}' in result
+    assert '\\hyperref[bar:bar-a]{Section \\ref{bar:bar-a}}' in result
 
 
 @with_app(buildername='latex', testroot='numfig',
           confoverrides={'numfig': True,
                          'numfig_format': {'figure': 'Figure:%s',
                                            'table': 'Tab_%s',
-                                           'code-block': 'Code-%s'}})
+                                           'code-block': 'Code-%s',
+                                           'section': 'SECTION-%s'}})
 def test_numref_with_prefix1(app, status, warning):
     app.builder.build_all()
     result = (app.outdir / 'Python.tex').text(encoding='utf8')
@@ -179,13 +182,16 @@ def test_numref_with_prefix1(app, status, warning):
     assert '\\hyperref[baz:table22]{Table:\\ref{baz:table22}}' in result
     assert '\\hyperref[index:code-1]{Code-\\ref{index:code-1}}' in result
     assert '\\hyperref[baz:code22]{Code-\\ref{baz:code22}}' in result
+    assert '\\hyperref[foo:foo]{SECTION-\\ref{foo:foo}}' in result
+    assert '\\hyperref[bar:bar-a]{SECTION-\\ref{bar:bar-a}}' in result
 
 
 @with_app(buildername='latex', testroot='numfig',
           confoverrides={'numfig': True,
                          'numfig_format': {'figure': 'Figure:%s.',
                                            'table': 'Tab_%s:',
-                                           'code-block': 'Code-%s | '}})
+                                           'code-block': 'Code-%s | ',
+                                           'section': 'SECTION_%s_'}})
 def test_numref_with_prefix2(app, status, warning):
     app.builder.build_all()
     result = (app.outdir / 'Python.tex').text(encoding='utf8')
@@ -203,6 +209,8 @@ def test_numref_with_prefix2(app, status, warning):
     assert '\\hyperref[baz:table22]{Table:\\ref{baz:table22}}' in result
     assert '\\hyperref[index:code-1]{Code-\\ref{index:code-1} \\textbar{} }' in result
     assert '\\hyperref[baz:code22]{Code-\\ref{baz:code22}}' in result
+    assert '\\hyperref[foo:foo]{SECTION\\_\\ref{foo:foo}\\_}' in result
+    assert '\\hyperref[bar:bar-a]{SECTION\\_\\ref{bar:bar-a}\\_}' in result
 
 
 @with_app(buildername='latex', testroot='numfig',
@@ -222,6 +230,8 @@ def test_numref_with_language_ja(app, status, warning):
     assert '\\hyperref[baz:table22]{Table:\\ref{baz:table22}}' in result
     assert '\\hyperref[index:code-1]{LIST \\ref{index:code-1}}' in result
     assert '\\hyperref[baz:code22]{Code-\\ref{baz:code22}}' in result
+    assert '\\hyperref[foo:foo]{Section \\ref{foo:foo}}' in result
+    assert '\\hyperref[bar:bar-a]{Section \\ref{bar:bar-a}}' in result
 
 
 @with_app(buildername='latex')
